<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailUserActivity">



    <ImageView
        android:id="@+id/detailAvatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars"
        tools:contentDescription="Avatar Detail"/>

    <TextView
        android:id="@+id/detailFullname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/detailAvatar"
        app:layout_constraintStart_toStartOf="@+id/detailAvatar"
        app:layout_constraintTop_toBottomOf="@+id/detailAvatar"
        tools:text="@string/fullname" />

    <TextView
        android:id="@+id/detailUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="@+id/detailFullname"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/detailFullname"
        app:layout_constraintTop_toBottomOf="@+id/detailFullname"
        tools:text="@string/username" />

    <TextView
        android:id="@+id/detailFollowers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/detailUsername"
        app:layout_constraintStart_toStartOf="@+id/detailUsername"
        app:layout_constraintTop_toBottomOf="@+id/detailUsername"
        tools:text="@string/dummynumber" />

    <TextView
        android:id="@+id/detailFollowing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailUsername"
        tools:text="@string/dummynumber" />

    <TextView
        android:id="@+id/detailRepo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailUsername"
        tools:text="@string/dummynumber" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabdetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailUsername"
        tools:contentDescription="Followers And Following" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/viewPager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="Followers and Following"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tabdetail" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Followers"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/detailFollowers"
        app:layout_constraintStart_toStartOf="@+id/detailFollowers"
        app:layout_constraintTop_toBottomOf="@+id/detailFollowers" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Following"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/detailFollowing"
        app:layout_constraintStart_toStartOf="@+id/detailFollowing"
        app:layout_constraintTop_toBottomOf="@+id/detailFollowing" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Repository"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/detailRepo"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="@+id/detailRepo"
        app:layout_constraintTop_toBottomOf="@+id/detailRepo" />



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_favoriteuser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:foregroundGravity="bottom"
        app:fabSize="normal"
        app:rippleColor="@color/second"
        app:elevation="2dp"
        android:backgroundTint="@color/base"
        app:layout_anchorGravity="bottom|end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_unfavorite" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:indeterminate="true"
        android:indeterminateTint="@color/base"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.206"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>